F&GDEV/src/objects/Object_clone_skipped_field__mdt.object
<CustomObject>
    <description>This is a generic setting which can be used to skip fields which should not be cloned while an object is being cloned</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>API name of the field to be skipped during the clone</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The picklist for the objects for which the fields will be skipped</description>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State_Availability__c</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Marketing_Name__c</fullName>
                </value>
                <value>
                    <fullName>Marketing_Materials__c</fullName>
                </value>
                <value>
                    <fullName>Product_State_Status__c</fullName>
                </value>
                <value>
                    <fullName>Product_to_Plan_Code_Association__c</fullName>
                </value>
                <value>
                    <fullName>Marketing_to_Product_State_Association__c</fullName>
                </value>
                <value>
                    <fullName>Product_Specification__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <description>Picklist values for the parent object for which the skip is going to happen</description>
        <label>Parent Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product_Specification__c</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Marketing_Materials__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object clone skipped field</label>
    <pluralLabel>Object clone skipped fields</pluralLabel>
</CustomObject>